tests/baselines/reference/project/nestedDeclare/amd/nestedDeclare.errors.txt
consume.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
consume.ts(7,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== consume.ts (2 errors) ====
    declare module "math" 
                   ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    {
        import blah = require("blah");
        export function baz();
    }
    
    declare module "blah"
                   ~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    {
    }
    